tests/invalid/tilde.m
[~];
% Tilde can't appear in RHS
